# cognito

./: README.md  artigo_cognito.docx  cognito.ipynb  cognito.py  cognito_tcc.ipynb  eval_results.txt  eval_traces.jsonl  pyproject.toml
tcc/: README.md  artigo_cognito.docx  cognito_tcc.ipynb
tcc/v1/: cognito_tcc.ipynb
tcc/v2/: cognito_tcc.ipynb
tcc/v4/: cognito_tcc.ipynb
tcc/v5/: cognito_tcc.ipynb
